# chat-api

./: .env  makefile  pyproject.toml
prisma/: schema.prisma  seed.py
prisma/migrations/20250329024238_init/: migration.sql
src/: main.py
src/controllers/: uploadController.py  userController.py
src/models/: user.py
src/repositories/: userRepository.py
src/schemas/: userSchema.py
src/services/: uploadService.py  userService.py
